<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format3>
  <name>smart_cart_project</name>
  <version>0.0.0</version>
  <description>Smart Cart Project with RPLiDAR A1</description>
  <maintainer email="changhyeon@todo.com">changhyeon</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sllidar_ros2</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
